correcting jgp filepaths

--- a/henkilokunta/Pesonen-Jukka/index.html
+++ b/henkilokunta/Pesonen-Jukka/index.html
@@ -15,10 +15,10 @@
   <title>Päiväkummun koulu</title>
 
   
-  <link href="http://localhost:1313/Paivakumpu_kotisivu/bootstrap.css" rel="stylesheet">
+  <link href="http://pesonjua.github.io/Paivakumpu_kotisivu/bootstrap.css" rel="stylesheet">
 
   
-  <link href="http://localhost:1313/Paivakumpu_kotisivu/offcanvas.css" rel="stylesheet">
+  <link href="http://pesonjua.github.io/Paivakumpu_kotisivu/offcanvas.css" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
 </head>
@@ -29,7 +29,7 @@
       
       <ul class="nav navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="http://localhost:1313/Paivakumpu_kotisivu/index.html"> <i class="fa fa-home fa-lg"></i> Alkuun</a>
+          <a class="nav-link" href="http://pesonjua.github.io/Paivakumpu_kotisivu/index.html"> <i class="fa fa-home fa-lg"></i> Alkuun</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="http://v4-alpha.getbootstrap.com/examples/offcanvas/#"> <i class="fa fa-info-circle fa-lg"></i> Yhteystiedot</a>
@@ -57,7 +57,7 @@
       <div class="card-block text-xs-center center-block">
         <h4 class="card-title">Jukka<br>Pesonen</h4>
         <h6 class="card-subtitle text-muted">Luokanopettaja, 3T</h6>
-        <img class="img-fluid" src="http://localhost:1313/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
+        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
       </div>
 
       <div class="card-block text-xs-center center-block">
@@ -75,7 +75,7 @@
       <div class="card-block text-xs-center center-block">
         <h4 class="card-title">Jukka<br>Pesonen</h4>
         <h6 class="card-subtitle text-muted">Keittäjä, </h6>
-        <img class="img-fluid" src="http://localhost:1313/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
+        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
       </div>
 
       <div class="card-block text-xs-center center-block">
@@ -93,7 +93,7 @@
       <div class="card-block text-xs-center center-block">
         <h4 class="card-title">Jukka<br>Pesonen</h4>
         <h6 class="card-subtitle text-muted">Luokanopettaja, 3T</h6>
-        <img class="img-fluid" src="http://localhost:1313/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
+        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
       </div>
 
       <div class="card-block text-xs-center center-block">
@@ -111,7 +111,7 @@
       <div class="card-block text-xs-center center-block">
         <h4 class="card-title">Jukka<br>Pesonen</h4>
         <h6 class="card-subtitle text-muted">Keittäjä, </h6>
-        <img class="img-fluid" src="http://localhost:1313/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
+        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
       </div>
 
       <div class="card-block text-xs-center center-block">
@@ -129,7 +129,7 @@
       <div class="card-block text-xs-center center-block">
         <h4 class="card-title">Jukka<br>Pesonen</h4>
         <h6 class="card-subtitle text-muted">Luokanopettaja, 3T</h6>
-        <img class="img-fluid" src="http://localhost:1313/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
+        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
       </div>
 
       <div class="card-block text-xs-center center-block">
@@ -147,7 +147,7 @@
       <div class="card-block text-xs-center center-block">
         <h4 class="card-title">Jukka<br>Pesonen</h4>
         <h6 class="card-subtitle text-muted">Keittäjä, </h6>
-        <img class="img-fluid" src="http://localhost:1313/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
+        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
       </div>
 
       <div class="card-block text-xs-center center-block">
@@ -165,7 +165,7 @@
       <div class="card-block text-xs-center center-block">
         <h4 class="card-title">Jukka<br>Pesonen</h4>
         <h6 class="card-subtitle text-muted">Luokanopettaja, 3T</h6>
-        <img class="img-fluid" src="http://localhost:1313/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
+        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
       </div>
 
       <div class="card-block text-xs-center center-block">
@@ -183,7 +183,7 @@
       <div class="card-block text-xs-center center-block">
         <h4 class="card-title">Jukka<br>Pesonen</h4>
         <h6 class="card-subtitle text-muted">Keittäjä, </h6>
-        <img class="img-fluid" src="http://localhost:1313/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
+        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
       </div>
 
       <div class="card-block text-xs-center center-block">
@@ -201,7 +201,7 @@
       <div class="card-block text-xs-center center-block">
         <h4 class="card-title">Jukka<br>Pesonen</h4>
         <h6 class="card-subtitle text-muted">Luokanopettaja, 3T</h6>
-        <img class="img-fluid" src="http://localhost:1313/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
+        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
       </div>
 
       <div class="card-block text-xs-center center-block">
@@ -219,7 +219,7 @@
       <div class="card-block text-xs-center center-block">
         <h4 class="card-title">Jukka<br>Pesonen</h4>
         <h6 class="card-subtitle text-muted">Keittäjä, </h6>
-        <img class="img-fluid" src="http://localhost:1313/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
+        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
       </div>
 
       <div class="card-block text-xs-center center-block">
@@ -237,7 +237,7 @@
       <div class="card-block text-xs-center center-block">
         <h4 class="card-title">Jukka<br>Pesonen</h4>
         <h6 class="card-subtitle text-muted">Luokanopettaja, 3T</h6>
-        <img class="img-fluid" src="http://localhost:1313/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
+        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
       </div>
 
       <div class="card-block text-xs-center center-block">
@@ -255,7 +255,7 @@
       <div class="card-block text-xs-center center-block">
         <h4 class="card-title">Jukka<br>Pesonen</h4>
         <h6 class="card-subtitle text-muted">Keittäjä, </h6>
-        <img class="img-fluid" src="http://localhost:1313/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
+        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
       </div>
 
       <div class="card-block text-xs-center center-block">
@@ -273,7 +273,7 @@
       <div class="card-block text-xs-center center-block">
         <h4 class="card-title">Jukka<br>Pesonen</h4>
         <h6 class="card-subtitle text-muted">Luokanopettaja, 3T</h6>
-        <img class="img-fluid" src="http://localhost:1313/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
+        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
       </div>
 
       <div class="card-block text-xs-center center-block">
@@ -291,7 +291,7 @@
       <div class="card-block text-xs-center center-block">
         <h4 class="card-title">Jukka<br>Pesonen</h4>
         <h6 class="card-subtitle text-muted">Keittäjä, </h6>
-        <img class="img-fluid" src="http://localhost:1313/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
+        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
       </div>
 
       <div class="card-block text-xs-center center-block">
@@ -309,7 +309,7 @@
       <div class="card-block text-xs-center center-block">
         <h4 class="card-title">Jukka<br>Pesonen</h4>
         <h6 class="card-subtitle text-muted">Luokanopettaja, 3T</h6>
-        <img class="img-fluid" src="http://localhost:1313/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
+        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
       </div>
 
       <div class="card-block text-xs-center center-block">
@@ -327,7 +327,7 @@
       <div class="card-block text-xs-center center-block">
         <h4 class="card-title">Jukka<br>Pesonen</h4>
         <h6 class="card-subtitle text-muted">Keittäjä, </h6>
-        <img class="img-fluid" src="http://localhost:1313/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
+        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
       </div>
 
       <div class="card-block text-xs-center center-block">
@@ -345,7 +345,7 @@
       <div class="card-block text-xs-center center-block">
         <h4 class="card-title">Jukka<br>Pesonen</h4>
         <h6 class="card-subtitle text-muted">Luokanopettaja, 3T</h6>
-        <img class="img-fluid" src="http://localhost:1313/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
+        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
       </div>
 
       <div class="card-block text-xs-center center-block">
@@ -363,7 +363,7 @@
       <div class="card-block text-xs-center center-block">
         <h4 class="card-title">Jukka<br>Pesonen</h4>
         <h6 class="card-subtitle text-muted">Keittäjä, </h6>
-        <img class="img-fluid" src="http://localhost:1313/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
+        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
       </div>
 
       <div class="card-block text-xs-center center-block">
@@ -381,7 +381,7 @@
       <div class="card-block text-xs-center center-block">
         <h4 class="card-title">Jukka<br>Pesonen</h4>
         <h6 class="card-subtitle text-muted">Luokanopettaja, 3T</h6>
-        <img class="img-fluid" src="http://localhost:1313/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
+        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
       </div>
 
       <div class="card-block text-xs-center center-block">
@@ -399,7 +399,7 @@
       <div class="card-block text-xs-center center-block">
         <h4 class="card-title">Jukka<br>Pesonen</h4>
         <h6 class="card-subtitle text-muted">Keittäjä, </h6>
-        <img class="img-fluid" src="http://localhost:1313/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
+        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
       </div>
 
       <div class="card-block text-xs-center center-block">
@@ -417,7 +417,7 @@
       <div class="card-block text-xs-center center-block">
         <h4 class="card-title">Jukka<br>Pesonen</h4>
         <h6 class="card-subtitle text-muted">Luokanopettaja, 3T</h6>
-        <img class="img-fluid" src="http://localhost:1313/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
+        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
       </div>
 
       <div class="card-block text-xs-center center-block">
@@ -435,7 +435,7 @@
       <div class="card-block text-xs-center center-block">
         <h4 class="card-title">Jukka<br>Pesonen</h4>
         <h6 class="card-subtitle text-muted">Keittäjä, </h6>
-        <img class="img-fluid" src="http://localhost:1313/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
+        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Jukka_Pesonen.jpg" alt="Card image">
       </div>
 
       <div class="card-block text-xs-center center-block">
@@ -481,6 +481,6 @@
   <script src="./util.js"></script>
 
 
-<script data-no-instant>document.write('<script src="/livereload.js?mindelay=10"></' + 'script>')</script></body>
+</body>
 
 </html>
