--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <a class="nav-link" href=""> <i class="fa fa-info-circle fa-lg"></i> Yhteystiedot</a>
         </li>
         <li class="nav-item"><a class="nav-link" href=""><i class="fa fa-book fa-lg"></i> Lomakkeet</a></li>
-        <li class="nav-item"><a class="nav-link" href=""><i class="fa fa-external-link fa-lg"></i> Wilma</a></li>
+        <li class="nav-item"><a class="nav-link" href="https://wilma.edu.vantaa.fi/"><i class="fa fa-external-link fa-lg"></i> Wilma</a></li>
       </ul>
     </div>
   </nav>
