correcting jgp filepaths

--- a/henkilokunta/index.html
+++ b/henkilokunta/index.html
@@ -473,12 +473,12 @@
   <script>
     window.jQuery || document.write('<script src="./jquery.min.js"><\/script>')
   </script>
-  <script src="./bootstrap.min.js"></script>
+  <script src="http://pesonjua.github.io/Paivakumpu_kotisivu/bootstrap.min.js"></script>
   
-  <script src="./ie10-viewport-bug-workaround.js"></script>
-  <script src="./offcanvas.js"></script>
-  <script src="./carousel.js"></script>
-  <script src="./util.js"></script>
+  <script src="http://pesonjua.github.io/Paivakumpu_kotisivu/ie10-viewport-bug-workaround.js"></script>
+  <script src="http://pesonjua.github.io/Paivakumpu_kotisivu/offcanvas.js"></script>
+  <script src="http://pesonjua.github.io/Paivakumpu_kotisivu/carousel.js"></script>
+  <script src="http://pesonjua.github.io/Paivakumpu_kotisivu/util.js"></script>
 
 
 </body>
