correcting jgp filepaths

--- a/henkilokunta/index.html
+++ b/henkilokunta/index.html
@@ -57,7 +57,7 @@
       <div class="card-block text-xs-center center-block">
         <h4 class="card-title">Jukka<br>Pesonen</h4>
         <h6 class="card-subtitle text-muted">Luokanopettaja, 3T</h6>
-        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Henkilokuntatiedostot/pesonen_jukka.jpg" alt="Card image">
+        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Henkilokuntatiedostot/Jukka_Pesonen.jpg" alt="Card image">
       </div>
 
       <div class="card-block text-xs-center center-block">
@@ -75,7 +75,7 @@
       <div class="card-block text-xs-center center-block">
         <h4 class="card-title">Jukka<br>Pesonen</h4>
         <h6 class="card-subtitle text-muted">Keittäjä, </h6>
-        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Henkilokuntatiedostot/pesonen_jukka.jpg" alt="Card image">
+        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Henkilokuntatiedostot/Jukka_Pesonen.jpg" alt="Card image">
       </div>
 
       <div class="card-block text-xs-center center-block">
@@ -93,7 +93,7 @@
       <div class="card-block text-xs-center center-block">
         <h4 class="card-title">Jukka<br>Pesonen</h4>
         <h6 class="card-subtitle text-muted">Luokanopettaja, 3T</h6>
-        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Henkilokuntatiedostot/pesonen_jukka.jpg" alt="Card image">
+        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Henkilokuntatiedostot/Jukka_Pesonen.jpg" alt="Card image">
       </div>
 
       <div class="card-block text-xs-center center-block">
@@ -111,7 +111,7 @@
       <div class="card-block text-xs-center center-block">
         <h4 class="card-title">Jukka<br>Pesonen</h4>
         <h6 class="card-subtitle text-muted">Keittäjä, </h6>
-        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Henkilokuntatiedostot/pesonen_jukka.jpg" alt="Card image">
+        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Henkilokuntatiedostot/Jukka_Pesonen.jpg" alt="Card image">
       </div>
 
       <div class="card-block text-xs-center center-block">
@@ -129,7 +129,7 @@
       <div class="card-block text-xs-center center-block">
         <h4 class="card-title">Jukka<br>Pesonen</h4>
         <h6 class="card-subtitle text-muted">Luokanopettaja, 3T</h6>
-        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Henkilokuntatiedostot/pesonen_jukka.jpg" alt="Card image">
+        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Henkilokuntatiedostot/Jukka_Pesonen.jpg" alt="Card image">
       </div>
 
       <div class="card-block text-xs-center center-block">
@@ -147,295 +147,7 @@
       <div class="card-block text-xs-center center-block">
         <h4 class="card-title">Jukka<br>Pesonen</h4>
         <h6 class="card-subtitle text-muted">Keittäjä, </h6>
-        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Henkilokuntatiedostot/pesonen_jukka.jpg" alt="Card image">
-      </div>
-
-      <div class="card-block text-xs-center center-block">
-        <p class="card-text">Tähän jotain kuvausta harrastuksista yms.</p>
-        <a class="card-text" href="mailto:pesonjua@gmail.com">pesonjua@gmail.com</a>
-        <p class="card-text">&#43;358 45 856 8658</p>
-      </div>
-    </div>
-  </div>
-  
-  
-  
-  <div class="col-xs-8 col-md-4 col-lg-3 col-xl-2">
-    <div class="card">
-      <div class="card-block text-xs-center center-block">
-        <h4 class="card-title">Jukka<br>Pesonen</h4>
-        <h6 class="card-subtitle text-muted">Luokanopettaja, 3T</h6>
-        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Henkilokuntatiedostot/pesonen_jukka.jpg" alt="Card image">
-      </div>
-
-      <div class="card-block text-xs-center center-block">
-        <p class="card-text">Tähän jotain kuvausta harrastuksista yms.</p>
-        <a class="card-text" href="mailto:pesonjua@gmail.com">pesonjua@gmail.com</a>
-        <p class="card-text">&#43;358 45 856 8658</p>
-      </div>
-    </div>
-  </div>
-  
-  
-  
-  <div class="col-xs-8 col-md-4 col-lg-3 col-xl-2">
-    <div class="card">
-      <div class="card-block text-xs-center center-block">
-        <h4 class="card-title">Jukka<br>Pesonen</h4>
-        <h6 class="card-subtitle text-muted">Keittäjä, </h6>
-        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Henkilokuntatiedostot/pesonen_jukka.jpg" alt="Card image">
-      </div>
-
-      <div class="card-block text-xs-center center-block">
-        <p class="card-text">Tähän jotain kuvausta harrastuksista yms.</p>
-        <a class="card-text" href="mailto:pesonjua@gmail.com">pesonjua@gmail.com</a>
-        <p class="card-text">&#43;358 45 856 8658</p>
-      </div>
-    </div>
-  </div>
-  
-  
-  
-  <div class="col-xs-8 col-md-4 col-lg-3 col-xl-2">
-    <div class="card">
-      <div class="card-block text-xs-center center-block">
-        <h4 class="card-title">Jukka<br>Pesonen</h4>
-        <h6 class="card-subtitle text-muted">Luokanopettaja, 3T</h6>
-        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Henkilokuntatiedostot/pesonen_jukka.jpg" alt="Card image">
-      </div>
-
-      <div class="card-block text-xs-center center-block">
-        <p class="card-text">Tähän jotain kuvausta harrastuksista yms.</p>
-        <a class="card-text" href="mailto:pesonjua@gmail.com">pesonjua@gmail.com</a>
-        <p class="card-text">&#43;358 45 856 8658</p>
-      </div>
-    </div>
-  </div>
-  
-  
-  
-  <div class="col-xs-8 col-md-4 col-lg-3 col-xl-2">
-    <div class="card">
-      <div class="card-block text-xs-center center-block">
-        <h4 class="card-title">Jukka<br>Pesonen</h4>
-        <h6 class="card-subtitle text-muted">Keittäjä, </h6>
-        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Henkilokuntatiedostot/pesonen_jukka.jpg" alt="Card image">
-      </div>
-
-      <div class="card-block text-xs-center center-block">
-        <p class="card-text">Tähän jotain kuvausta harrastuksista yms.</p>
-        <a class="card-text" href="mailto:pesonjua@gmail.com">pesonjua@gmail.com</a>
-        <p class="card-text">&#43;358 45 856 8658</p>
-      </div>
-    </div>
-  </div>
-  
-  
-  
-  <div class="col-xs-8 col-md-4 col-lg-3 col-xl-2">
-    <div class="card">
-      <div class="card-block text-xs-center center-block">
-        <h4 class="card-title">Jukka<br>Pesonen</h4>
-        <h6 class="card-subtitle text-muted">Luokanopettaja, 3T</h6>
-        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Henkilokuntatiedostot/pesonen_jukka.jpg" alt="Card image">
-      </div>
-
-      <div class="card-block text-xs-center center-block">
-        <p class="card-text">Tähän jotain kuvausta harrastuksista yms.</p>
-        <a class="card-text" href="mailto:pesonjua@gmail.com">pesonjua@gmail.com</a>
-        <p class="card-text">&#43;358 45 856 8658</p>
-      </div>
-    </div>
-  </div>
-  
-  
-  
-  <div class="col-xs-8 col-md-4 col-lg-3 col-xl-2">
-    <div class="card">
-      <div class="card-block text-xs-center center-block">
-        <h4 class="card-title">Jukka<br>Pesonen</h4>
-        <h6 class="card-subtitle text-muted">Keittäjä, </h6>
-        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Henkilokuntatiedostot/pesonen_jukka.jpg" alt="Card image">
-      </div>
-
-      <div class="card-block text-xs-center center-block">
-        <p class="card-text">Tähän jotain kuvausta harrastuksista yms.</p>
-        <a class="card-text" href="mailto:pesonjua@gmail.com">pesonjua@gmail.com</a>
-        <p class="card-text">&#43;358 45 856 8658</p>
-      </div>
-    </div>
-  </div>
-  
-  
-  
-  <div class="col-xs-8 col-md-4 col-lg-3 col-xl-2">
-    <div class="card">
-      <div class="card-block text-xs-center center-block">
-        <h4 class="card-title">Jukka<br>Pesonen</h4>
-        <h6 class="card-subtitle text-muted">Luokanopettaja, 3T</h6>
-        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Henkilokuntatiedostot/pesonen_jukka.jpg" alt="Card image">
-      </div>
-
-      <div class="card-block text-xs-center center-block">
-        <p class="card-text">Tähän jotain kuvausta harrastuksista yms.</p>
-        <a class="card-text" href="mailto:pesonjua@gmail.com">pesonjua@gmail.com</a>
-        <p class="card-text">&#43;358 45 856 8658</p>
-      </div>
-    </div>
-  </div>
-  
-  
-  
-  <div class="col-xs-8 col-md-4 col-lg-3 col-xl-2">
-    <div class="card">
-      <div class="card-block text-xs-center center-block">
-        <h4 class="card-title">Jukka<br>Pesonen</h4>
-        <h6 class="card-subtitle text-muted">Keittäjä, </h6>
-        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Henkilokuntatiedostot/pesonen_jukka.jpg" alt="Card image">
-      </div>
-
-      <div class="card-block text-xs-center center-block">
-        <p class="card-text">Tähän jotain kuvausta harrastuksista yms.</p>
-        <a class="card-text" href="mailto:pesonjua@gmail.com">pesonjua@gmail.com</a>
-        <p class="card-text">&#43;358 45 856 8658</p>
-      </div>
-    </div>
-  </div>
-  
-  
-  
-  <div class="col-xs-8 col-md-4 col-lg-3 col-xl-2">
-    <div class="card">
-      <div class="card-block text-xs-center center-block">
-        <h4 class="card-title">Jukka<br>Pesonen</h4>
-        <h6 class="card-subtitle text-muted">Luokanopettaja, 3T</h6>
-        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Henkilokuntatiedostot/pesonen_jukka.jpg" alt="Card image">
-      </div>
-
-      <div class="card-block text-xs-center center-block">
-        <p class="card-text">Tähän jotain kuvausta harrastuksista yms.</p>
-        <a class="card-text" href="mailto:pesonjua@gmail.com">pesonjua@gmail.com</a>
-        <p class="card-text">&#43;358 45 856 8658</p>
-      </div>
-    </div>
-  </div>
-  
-  
-  
-  <div class="col-xs-8 col-md-4 col-lg-3 col-xl-2">
-    <div class="card">
-      <div class="card-block text-xs-center center-block">
-        <h4 class="card-title">Jukka<br>Pesonen</h4>
-        <h6 class="card-subtitle text-muted">Keittäjä, </h6>
-        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Henkilokuntatiedostot/pesonen_jukka.jpg" alt="Card image">
-      </div>
-
-      <div class="card-block text-xs-center center-block">
-        <p class="card-text">Tähän jotain kuvausta harrastuksista yms.</p>
-        <a class="card-text" href="mailto:pesonjua@gmail.com">pesonjua@gmail.com</a>
-        <p class="card-text">&#43;358 45 856 8658</p>
-      </div>
-    </div>
-  </div>
-  
-  
-  
-  <div class="col-xs-8 col-md-4 col-lg-3 col-xl-2">
-    <div class="card">
-      <div class="card-block text-xs-center center-block">
-        <h4 class="card-title">Jukka<br>Pesonen</h4>
-        <h6 class="card-subtitle text-muted">Luokanopettaja, 3T</h6>
-        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Henkilokuntatiedostot/pesonen_jukka.jpg" alt="Card image">
-      </div>
-
-      <div class="card-block text-xs-center center-block">
-        <p class="card-text">Tähän jotain kuvausta harrastuksista yms.</p>
-        <a class="card-text" href="mailto:pesonjua@gmail.com">pesonjua@gmail.com</a>
-        <p class="card-text">&#43;358 45 856 8658</p>
-      </div>
-    </div>
-  </div>
-  
-  
-  
-  <div class="col-xs-8 col-md-4 col-lg-3 col-xl-2">
-    <div class="card">
-      <div class="card-block text-xs-center center-block">
-        <h4 class="card-title">Jukka<br>Pesonen</h4>
-        <h6 class="card-subtitle text-muted">Keittäjä, </h6>
-        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Henkilokuntatiedostot/pesonen_jukka.jpg" alt="Card image">
-      </div>
-
-      <div class="card-block text-xs-center center-block">
-        <p class="card-text">Tähän jotain kuvausta harrastuksista yms.</p>
-        <a class="card-text" href="mailto:pesonjua@gmail.com">pesonjua@gmail.com</a>
-        <p class="card-text">&#43;358 45 856 8658</p>
-      </div>
-    </div>
-  </div>
-  
-  
-  
-  <div class="col-xs-8 col-md-4 col-lg-3 col-xl-2">
-    <div class="card">
-      <div class="card-block text-xs-center center-block">
-        <h4 class="card-title">Jukka<br>Pesonen</h4>
-        <h6 class="card-subtitle text-muted">Luokanopettaja, 3T</h6>
-        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Henkilokuntatiedostot/pesonen_jukka.jpg" alt="Card image">
-      </div>
-
-      <div class="card-block text-xs-center center-block">
-        <p class="card-text">Tähän jotain kuvausta harrastuksista yms.</p>
-        <a class="card-text" href="mailto:pesonjua@gmail.com">pesonjua@gmail.com</a>
-        <p class="card-text">&#43;358 45 856 8658</p>
-      </div>
-    </div>
-  </div>
-  
-  
-  
-  <div class="col-xs-8 col-md-4 col-lg-3 col-xl-2">
-    <div class="card">
-      <div class="card-block text-xs-center center-block">
-        <h4 class="card-title">Jukka<br>Pesonen</h4>
-        <h6 class="card-subtitle text-muted">Keittäjä, </h6>
-        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Henkilokuntatiedostot/pesonen_jukka.jpg" alt="Card image">
-      </div>
-
-      <div class="card-block text-xs-center center-block">
-        <p class="card-text">Tähän jotain kuvausta harrastuksista yms.</p>
-        <a class="card-text" href="mailto:pesonjua@gmail.com">pesonjua@gmail.com</a>
-        <p class="card-text">&#43;358 45 856 8658</p>
-      </div>
-    </div>
-  </div>
-  
-  
-  
-  <div class="col-xs-8 col-md-4 col-lg-3 col-xl-2">
-    <div class="card">
-      <div class="card-block text-xs-center center-block">
-        <h4 class="card-title">Jukka<br>Pesonen</h4>
-        <h6 class="card-subtitle text-muted">Luokanopettaja, 3T</h6>
-        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Henkilokuntatiedostot/pesonen_jukka.jpg" alt="Card image">
-      </div>
-
-      <div class="card-block text-xs-center center-block">
-        <p class="card-text">Tähän jotain kuvausta harrastuksista yms.</p>
-        <a class="card-text" href="mailto:pesonjua@gmail.com">pesonjua@gmail.com</a>
-        <p class="card-text">&#43;358 45 856 8658</p>
-      </div>
-    </div>
-  </div>
-  
-  
-  
-  <div class="col-xs-8 col-md-4 col-lg-3 col-xl-2">
-    <div class="card">
-      <div class="card-block text-xs-center center-block">
-        <h4 class="card-title">Jukka<br>Pesonen</h4>
-        <h6 class="card-subtitle text-muted">Keittäjä, </h6>
-        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Henkilokuntatiedostot/pesonen_jukka.jpg" alt="Card image">
+        <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Henkilokuntatiedostot/Jukka_Pesonen.jpg" alt="Card image">
       </div>
 
       <div class="card-block text-xs-center center-block">
@@ -469,7 +181,7 @@
 
   
   
-  <script src="./jquery.min.js"></script>
+  <script src="http://pesonjua.github.io/Paivakumpu_kotisivu/jquery.min.js"></script>
   <script>
     window.jQuery || document.write('<script src="./jquery.min.js"><\/script>')
   </script>
