correcting jgp filepaths

--- a/henkilokunta/index.html
+++ b/henkilokunta/index.html
@@ -183,7 +183,7 @@
   
   <script src="http://pesonjua.github.io/Paivakumpu_kotisivu/jquery.min.js"></script>
   <script>
-    window.jQuery || document.write('<script src="./jquery.min.js"><\/script>')
+    window.jQuery || document.write('<script src="http://pesonjua.github.io/Paivakumpu_kotisivu/jquery.min.js"><\/script>')
   </script>
   <script src="http://pesonjua.github.io/Paivakumpu_kotisivu/bootstrap.min.js"></script>
   
