correcting jgp filepaths

--- a/henkilokunta/index.html
+++ b/henkilokunta/index.html
@@ -56,7 +56,7 @@
     <div class="card">
       <div class="card-block text-xs-center center-block">
         <h4 class="card-title">Jukka<br>Pesonen</h4>
-        <h6 class="card-subtitle text-muted">Luokanopettaja, 3T</h6>
+        <h6 class="card-subtitle text-muted">Luokanopettaja</h6>
         <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Henkilokuntatiedostot/Jukka_Pesonen.jpg" alt="Card image">
       </div>
 
@@ -74,7 +74,7 @@
     <div class="card">
       <div class="card-block text-xs-center center-block">
         <h4 class="card-title">Jukka<br>Pesonen</h4>
-        <h6 class="card-subtitle text-muted">Keittäjä, </h6>
+        <h6 class="card-subtitle text-muted">Keittäjä</h6>
         <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Henkilokuntatiedostot/Jukka_Pesonen.jpg" alt="Card image">
       </div>
 
@@ -92,7 +92,7 @@
     <div class="card">
       <div class="card-block text-xs-center center-block">
         <h4 class="card-title">Jukka<br>Pesonen</h4>
-        <h6 class="card-subtitle text-muted">Luokanopettaja, 3T</h6>
+        <h6 class="card-subtitle text-muted">Luokanopettaja</h6>
         <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Henkilokuntatiedostot/Jukka_Pesonen.jpg" alt="Card image">
       </div>
 
@@ -110,7 +110,7 @@
     <div class="card">
       <div class="card-block text-xs-center center-block">
         <h4 class="card-title">Jukka<br>Pesonen</h4>
-        <h6 class="card-subtitle text-muted">Keittäjä, </h6>
+        <h6 class="card-subtitle text-muted">Keittäjä</h6>
         <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Henkilokuntatiedostot/Jukka_Pesonen.jpg" alt="Card image">
       </div>
 
@@ -128,7 +128,7 @@
     <div class="card">
       <div class="card-block text-xs-center center-block">
         <h4 class="card-title">Jukka<br>Pesonen</h4>
-        <h6 class="card-subtitle text-muted">Luokanopettaja, 3T</h6>
+        <h6 class="card-subtitle text-muted">Luokanopettaja</h6>
         <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Henkilokuntatiedostot/Jukka_Pesonen.jpg" alt="Card image">
       </div>
 
@@ -146,7 +146,7 @@
     <div class="card">
       <div class="card-block text-xs-center center-block">
         <h4 class="card-title">Jukka<br>Pesonen</h4>
-        <h6 class="card-subtitle text-muted">Keittäjä, </h6>
+        <h6 class="card-subtitle text-muted">Keittäjä</h6>
         <img class="img-fluid" src="http://pesonjua.github.io/Paivakumpu_kotisivu/Henkilokuntatiedostot/Jukka_Pesonen.jpg" alt="Card image">
       </div>
 
