correcting jgp filepaths

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           
           
           <hr size=1>
-          <p>Elastinen ja Robin haastoivat viime elokuussa KiVa-koulujen oppilaat osallistumaan kiusaamisen vastaiseen kampanjaan. Haaste sai valtavan suosion; peräti 468 KiVa-koulua lähti mukaan.</p>
+          <p>Elastinen ja Robin haastoivat viime elokuussa KiVa-koulujen oppilaat osallistumaan kiusaamisen vastaiseen kampanjaan. Haaste sai valtavan suosion; peräti 468 KiVa-koulua lähti mukaan, mukaan lukien myös Päiväkummun koulu.</p>
 
 
 <div style="position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden;">
