correcting jgp filepaths

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           
           
           <hr size=1>
-          <p>Koko koulu toivottaa Pekalle hyvin ansaittuja eläkepäiviä!</p>
+          <p>Koko koulu toivottaa Pekalle hyvin ansaittuja eläkepäiviä!!!</p>
 
 
 <figure >
