correcting jgp filepaths

--- a/index.html
+++ b/index.html
@@ -189,6 +189,9 @@
           <hr size=1>
           <p>Opetushallitus on valmistelemassa uutta varhaiskasvatussuunnitelmaa.</p>
 
+<blockquote class="twitter-tweet"><p lang="fi" dir="ltr">Varhaiskasvatussuunnitelman perusteprosessille aikataulu <a href="https://t.co/nG7uK1lxxo">https://t.co/nG7uK1lxxo</a></p>&mdash; Opetushallitus (@Opetushallitus) <a href="https://twitter.com/Opetushallitus/status/687241168829087744">January 13, 2016</a></blockquote>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
           <br>
           <br>
         
