correcting jgp filepaths

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 </div>
 
 
-<p>Tulostiedoston taulukkomuodossa voit ladata <a href="http://pesonjua.github.io/Paivakumpu_kotisivu/tulokset.xls">täältä</a></p>
+<p>Tulostiedoston taulukkomuodossa voit ladata <a href="https://docs.google.com/spreadsheets/d/1y3jCrnJCqsumxPQWwuIYJarfMJekSX0X7q9eamF1Zcw/pubhtml?gid=507437474&amp;single=true">täältä</a></p>
 
           <br>
           <br>
